@@ -1,10 +1,0 @@
-<?php
-// DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2012-09-26 09:16
-
-$extensionPath = t3lib_extMgm::extPath('wizard_crpagetree');
-$extensionClassesPath = $extensionPath . 'classes/';
-return array(
-	'tx_wizardcrpagetree_webfunc_createpagetree' => $extensionClassesPath . 'Webfunc/CreatePageTree.php',
-);
-?>
